6-15-19
- wrote functions to get and set register values

6-14-19
- somehow, for a little over three months after getting rid of
catch_mach_exception_raise, I forgot to reimplement the case where
an exception is not caused by a soft signal, single step, breakpoint, or
watchpoint. That functionality has been reintroduced
- get rid of those three printing threads and introduce a new, thread safe,
centralized printing system which prevents garbled/double reprompts

6-13-19
- each thread has its own last_hit_bkpt_ID
- get rid of resume_after_exception
- use sigaction instead of signal 
- call ops_suspend and ops_resume instead of debuggee->suspend() and
debuggee->resume()

6-12-19
- detach before we send the kill signal for the kill command
- don't use the same space on the stack for multiple exceptions, exception
handling is almost rock solid now
- each thread has its own last_hit_wp_loc and last_hit_wp_PC

6-11-19
- check if debuggee is suspended based on suspend count instead of manually
flipping a flag
- making output nicer

6-5-19
- rewriting exception & mutex logic

6-4-19
- finished implementing new map-based argument system
- working on thread-specific breakpoints

6-3-19
- implementing new map-based argument system, will allow for freeform
arguments

6-2-19
- fix software breakpoint bug - setting two at the same spot would cause the
second one to pick up BRK #0 as the original instruction
- do away with using the pointer passed to realloc again
- fix (breakpoint|watchpoint)_delete regexes - allow more than one ID to be
given
- rewrite the way iosdbg figures out the debuggee's ASLR slide
- fix double free when attaching to something different while already attached
to something

5-31-19
- improvements for watchpoints, set up BAS and align DBGWVR<n>_EL1
correctly

5-29-19
- kill command while stopped at exception won't deadlock anymore
- concat does not use the pointer passed to realloc anymore