@@ -1,3 +1,6 @@
+6-16-19
+- routinely update thread specific breakpoints
+
 6-15-19
 - wrote functions to get and set register values
 
